--- a/HTML/hangman_index.html
+++ b/HTML/hangman_index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-  <!-- Bootstrap 4 CDN -->
+  <!-- Bootstrap -->
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
 
   <title>Hangman</title>
@@ -23,6 +23,6 @@
   </div> 
 </div>
 
-<script src='./js/hangman.js'></script>
+<script src='./JS/hangman.js'></script>
 </body>
 </html>
